# pyflare

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  LICENSING_NOTES.md  PLAN.md  README.md  RELEASE.md  STATUS.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  country_maintainer.md  feature_request.md
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: api.rst  conf.py  index.md  licensing.md  quickstart.md
drafts/: y2_eog_client_id.md  y2_eog_greg_reply.md  y2_eog_request.md  y2_eog_use_description.md  y4_adeyanju.md  y4_elvidge.md  y4_sdn.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: CountryCard.tsx  HeroNumber.tsx  SectionLabel.tsx
notebooks/: 01_niger_delta.ipynb  02_angola.ipynb  03_algeria.ipynb  04_libya.ipynb
scripts/: _build_country_notebooks.py  _build_iconic_africa_map.py  _build_iconic_timelapse.py  _build_niger_delta_notebook.py  _export_frontend_data.py  verify.sh
src/pyflare/: __init__.py  analysis.py  dashboard.py  data.py  viz.py
tests/: test_analysis.py  test_data.py  test_viz.py
